# ALCO

./: .gitignore  AGENTS.md  PLANS.md  README.md  prompt_head.md  pyproject.toml
configs/: lkh.yaml  local_vllm.yaml  paths.yaml  rl.yaml  sft.yaml  tsp_generation.yaml  zeroshot_eval.yaml  zeroshot_local_vllm.yaml
docs/: architecture.md
scripts/: download_hf_model.py  evaluate_model.py  extract_sft_data.py  generate_tsp_data.py  run_rl.py  run_zeroshot_rollout.py  serve_vllm_openai.py  setup_lkh.sh  solve_tsp_with_lkh.py
specs/: project_layout.md  prompt_template.md
specs/schemas/: episode_log.schema.json  rollout_state.schema.json  rollout_step.schema.json  tsp_instance.schema.json
src/tsp_action_rl/: __init__.py
src/tsp_action_rl/config/: __init__.py  lkh.py  rl.py
src/tsp_action_rl/data/: __init__.py  generation.py  io.py  models.py
src/tsp_action_rl/evaluation/: __init__.py
src/tsp_action_rl/inference/: __init__.py  backends.py  interface.py
src/tsp_action_rl/parsing/: __init__.py  final_tag_parser.py
src/tsp_action_rl/prompts/: __init__.py  tsp_prompt.py
src/tsp_action_rl/rl/: __init__.py  environment.py  reward.py  slime_adapter.py  slime_phase6.py  slime_training.py
src/tsp_action_rl/rollout/: __init__.py  logging_utils.py  (+1 more)
tests/: conftest.py  test_data_layer.py  test_inference_dmx_backend.py  test_lkh_real_integration.py  test_lkh_wrapper.py  test_parser.py  test_rl_env.py  test_rl_slime_adapter.py  test_rl_slime_training_pipeline.py  test_rollout_env.py  test_sft_trace_mining.py  test_zeroshot_cli_config.py
tests/fixtures/: episode_log_success.json  rollout_state_prefix3.json  rollout_step_invalid_repeated_node.json  rollout_step_valid.json  sample_model_output_invalid.txt  sample_model_output_valid.txt  sample_prompt_step1.txt  sft_episode_invalid.json  sft_episode_valid.json  sft_run_summary.json  tsp_instance_minimal.json
(+6 files in other folders)
